--- a/CSS/22-CSS/style.css
+++ b/CSS/22-CSS/style.css
@@ -1,102 +1,128 @@
-body {
-    background-color: white;
-    font-family: 'Raleway', sans-serif;
-  }
-  
-  .navigation ul {
-    margin: 0;
-    padding: 0;
-    text-align: center;
-  }
-  
-  .navigation li {
-    font-weight: 100;
-    letter-spacing: 2px;
-  }
-  
-  .navigation  li.logo {
-    color: black;
-    font-size: 18px;
-    font-weight: 700;
-    letter-spacing: 4px;
-  }
-  
-  #banner {
-    background-image: url("https://content.codecademy.com/courses/web-101/unit-6/htmlcss1-img_tahoe.jpeg");
-    background-size: cover;
-    background-position: bottom center;
-    width: 100%;
-  }
-  
-  #banner .content h1 {
-    position: relative;
-    top: 50px;
+* {
     margin: 0 auto;
-  }
-  
-  #main {
-    padding: 40px;
-    text-align: center;
-    width: 400px;
-  }
-  
-  h1 {
-    color: white;
-    font-size: 42px;
-    font-weight: 600;
-    text-align: center;
-  }
-  
-  h2 {
-    color: red;
-    font-size: 14px;
-    line-height: 48px;
-    text-align: center;
-  }
-  
-  h3 {
-    color: red;
-    font-size: 26px;
-    font-weight: 700;
-    padding: 20px 10px;
-  }
-  
-  p {
-    color: grey;
-    font-size: 16px;
-    line-height: 48px;
-  }
-  
-  .pull-quote {
-  }
-  
-  .byline {
-    border-bottom: 1px solid LightGrey;
-    border-top: 1px solid LightGrey;
-    color: DarkGrey;
-    font-size: 14px;
-    font-weight: 200;
-  }
-  
-  .share {
-    border: 1px solid LightGrey;
-    padding: 40px 0px;
-    position: relative;
-    text-align: center;
-    width: 100%;
-  }
-  
-  .share a {
-    background: red;
-    border: 1px solid red;
-    border-radius: 3px;
-    color: white;
-    display: inline-block;
-    text-decoration: none;
-  }
-  
-  .share a:hover {
-    background: white;
-    border: 1px solid red;
-    color: red;
-  }
+    padding: 0 auto;
+}
+body {
+  background-color: white;
+  font-family: 'Raleway', sans-serif;
+}
+
+.navigation ul {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
+.navigation li {
+  font-weight: 100;
+  letter-spacing: 2px;
+  padding: 20px;
+}
+
+.navigation li.logo {
+  color: black;
+  font-size: 18px;
+  font-weight: 700;
+  letter-spacing: 4px;
+}
+
+#banner {
+  background-image: url("https://content.codecademy.com/courses/web-101/unit-6/htmlcss1-img_tahoe.jpeg");
+  background-size: cover;
+  background-position: bottom center;
+  height: 700px;
+  width: 100%;
+}
+
+#banner .content h1 {
+  position: relative;
+  top: 50px;
+  width: 400px;
+  border-radius: 15px;
+  border: solid white 3px;
+  margin: 0 auto;
+}
+
+#main {
+  padding: 40px;
+  text-align: center;
+  width: 400px;
+  margin: 0 auto;
+  overflow: scroll;
+}
+
+h1 {
+  color: white;
+  font-size: 42px;
+  font-weight: 600;
+  text-align: center;
+}
+
+h2 {
+  color: red;
+  font-size: 14px;
+  line-height: 48px;
+  border: dotted red 1px;
+  text-align: center;
+  padding: 20px 30px;
+  margin: 30px 20px;
+}
+
+h3 {
+  color: red;
+  font-size: 26px;
+  font-weight: 700;
+  padding: 20px 10px;
+}
+
+p {
+  color: grey;
+  font-size: 16px;
+  line-height: 48px;
+  padding: 60px 20px;
+  margin-top: 60px;
+  min-width: 200px;
+  max-width: 300px;
+}
+
+.pull-quote {
+  width: 350px;
+  margin: 0 auto;
+}
+
+.byline {
+  border-bottom: 350px solid LightGrey;
+  border-top: 1px solid LightGrey;
+  color: DarkGrey;
+  font-size: 14px;
+  font-weight: 200;
+}
+
+.share {
+  border: 1px solid LightGrey;
+  padding: 40px 0px;
+  position: relative;
+  text-align: center;
+  width: 100%;
+}
+
+.share a {
+  background: red;
+  border: 1px solid red;
+  border-radius: 3px;
+  color: white;
+  display: inline-block;
+  text-decoration: none;
+  padding: 14px;
+  margin: 10px;
+}
+
+.share a:hover {
+  background: white;
+  border: 1px solid red;
+  color: red;
+}
+
+.donate {
+  visibility: hidden;
+}
