--- a/CSS/31-CSS/style.css
+++ b/CSS/31-CSS/style.css
@@ -31,21 +31,31 @@ body {
   /* App Container */
   .container {
     border: 2px solid snow;
+    display: flex;
   }
   
   /* To Do Section */
   .week {
+    display: inline-flex;
+    flex-direction: column;
+    flex-grow: 3;
   }
   
   .row {
     min-height: 200px;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
   }
   
   .square {
+    display: flex;
     width: 125px;
     height: 125px;
     padding: 10px;
+    justify-content: center;
+    align-items: center;
   }
   
   .day.square {
@@ -67,6 +77,8 @@ body {
   /* Reminders */
   .reminders {
     background-color: khaki;
+    display: inline-flex;
+    flex-grow: 2;
   }
   
   .reminders h3 {
