--- a/CSS/32-CSS/style.css
+++ b/CSS/32-CSS/style.css
@@ -127,7 +127,7 @@ header {
 
 .gallery-container {
     flex-wrap: wrap;
-    heigth: auto;
+    height: auto;
     justify-content: center;
     align-items: space-between;
 }
