--- a/Instagram/style.css
+++ b/Instagram/style.css
@@ -12,27 +12,16 @@
 body {
     margin: 0;
     padding: 0;
+    width: 470px;
+    height: 930px;
+    border: solid 1px #D9D9D9;
 }
 
 #top-bar {
     height: 37px;
     width: 429px;
-
-    margin: ;
     display: flex;
     justify-content: space-between;
     position: fixed;
     top: 0;
-}
-
-
-
-.round {
-    border-radius: 50%;
-}
-
-
-.bottom-nav {
-    position: sticky;
-    bottom: 0;
 }
