--- a/sitePessoal/style.css
+++ b/sitePessoal/style.css
@@ -3,19 +3,32 @@
     src: url('assets/fonts/W95FA.otf');
 }
 
+@font-face {
+    font-family: FGLight;
+    src: url('assets/fonts/FranklinGothic-Light.ttf');
+}
+
+@font-face {
+    font-family: FGCondensed;
+    src: url('assets/fonts/FRAMDCN.ttf');
+}
+
+:root {
+    --background-color: #008080;
+    --light-gray: #c3c3c3;
+    --white: #fdffff;
+    --blue: #010081;
+    --black: #000000;
+}
+
 * {
     margin: 0;
     padding: 0;
 }
 
-:root {
-    --background-color: #008080;
-    --dark-gray: #818181;
-    --light-gray: #c3c3c3;
-    --white: #fdffff;
-    --blue: #010081;
-    --black: #000000;
-    --pink: #ff0081;
+html {
+    scroll-behavior: smooth;
+    scroll-padding-top: 70px;
 }
 
 body {
@@ -64,16 +77,75 @@ a {
     margin: 0;
 }
 
+#hero {
+    background-image: url("assets/images/hero.jpg");
+    background-size: cover;
+    height: 900px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 90px;
+    font-family: FGCondensed;
+    flex-direction: column;
+    color: var(--black);
+}
+
+.hero-heading {
+    display: flex;
+    flex-direction: column;
+    justify-content: baselinekkk;
+}
+
+#regular {
+    font-family: FGLight;
+    font-weight: 200;
+}
+
+#winLogo {
+    height: 300px;
+    width: auto;
+}
+
 .window {
     border: outset;
     background-color: var(--light-gray);
-    width: 80%;
+    margin: 40px 130px;
 }
 
+.window-heading {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--blue);
+    margin: 2px;
+}
 
+.window-heading h2 {
+    margin: 2px 0 2px 8px;
+    font-size: 20px;
+}
+
+.window-icons {
+    display: flex;
+    align-items: center;
+    margin-right: 2px;
+}
+
+.window-icon {
+    background-color: var(--light-gray);
+    border: outset var(--black);
+    box-shadow: 1px;
+    margin-inline: 1px;
+}
 
 #top-bar {
     display: flex;
+}
+
+#selfie-img {
+    height: 300px;
+    width: auto;
+    border: outset var(--black);
 }
 
 #start-menu {
